# bsj-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/bsj_agent/: __init__.py  run.py  workflow.py
src/bsj_agent/agents/: __init__.py  bsj_captioner.py  bsj_newsletter_rewriter.py  bsj_researcher.py  bsj_scriptwriter.py  bsj_thumbnail_promptor.py  bsj_voiceover.py
src/bsj_agent/agents/captioner/: __init__.py
src/bsj_agent/agents/researcher/: __init__.py
src/bsj_agent/agents/scriptwriter/: __init__.py
src/bsj_agent/agents/thumbnail_promptor/: __init__.py
src/bsj_agent/agents/voiceover/: __init__.py
src/bsj_agent/tools/: __init__.py  mcp_smoke.py  mcp_utils.py  tool_elevenlabs_tts.py  tool_fetch_url.py  tool_web_search.py
src/bsj_agent_v2/: __init__.py  agent.py  workflow.py
src/bsj_agent_v2/agents/captioner/: __init__.py
src/bsj_agent_v2/agents/normalizer/: __init__.py
src/bsj_agent_v2/agents/researcher/: __init__.py
src/bsj_agent_v2/agents/review_gate/: __init__.py
src/bsj_agent_v2/agents/scriptwriter/: __init__.py
src/bsj_agent_v2/agents/thumbnail_promptor/: __init__.py
src/bsj_agent_v2/agents/voiceover/: __init__.py
src/bsj_agent_v2/runner/: cli.py
src/bsj_agent_v2/tools/: mcp_utils.py
